--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    
+    <script src="src/js/data.js"></script>
     <script src="src/js/scripts2.js"></script>
   </body>
 </html>
