working on nav title animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
   </head>
 
   <body class="body">
-    <nav class="nav">hello</nav>
+    <nav class="nav-container">
+ <div class="nav-heroes"><h3>heroes</h3></div>
+      <div class="nav-search">
+<form class="form-inline heroes-search">
+      <input
+        class="form-control mr-sm-2"
+        id="heroes-search"
+        type="search"
+        placeholder="Enter name to search..."
+        aria-label="Search a Hero/Villain"
+      />
+    </form>
+      </div>
+      <div class="nav-villains"><h3>villains</h3></div>
+    </nav>
     <!-- <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
       <a class="navbar-brand pokemon-title" href="#"><h1>Pokédex</h1></a>
       <button
@@ -34,15 +48,7 @@
       <div class="collapse navbar-collapse" id="navbarNav"> 
     <ul class="navbar-nav"> -->
 
-    <form class="form-inline heroes-search">
-      <input
-        class="form-control mr-sm-2"
-        id="heroes-search"
-        type="search"
-        placeholder="Enter name to search..."
-        aria-label="Search a Hero/Villain"
-      />
-    </form>
+   
     <!-- </div> -->
 
     <!-- <li class="nav-item active">
