--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
       <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> -->
       <div class="modal-dialog hidden" role="document">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel"></h5>
-          </div>
+          <div class="modal-header"></div>
           <div class="modal-body font-weight-bold text-center">
             <div class="modal-image-container"></div>
           </div>
@@ -70,22 +68,22 @@
       <!-- </div> -->
     </div>
 
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
     ></script>  -->
 
-    <script
+    <!-- <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
     <script src="src/js/data.js"></script>
     <script src="src/js/scripts2.js"></script>
