Added new local data file

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       crossorigin="anonymous"
     ></script> -->
 
-    <script src="src/js/data.js"></script>
+    <!-- <script src="src/js/data.js"></script> -->
+    <script src="src/js/all.json"></script>
     <script src="src/js/scripts2.js"></script>
   </body>
 </html>
