Added affiliations-modal (submodal for connections)

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <div class="powers-modal hidden"></div>
         <div class="appearance-modal hidden"></div>
         <div class="bio-modal hidden"></div>
+        <div class="work-modal hidden"></div>
         <div class="affiliations-modal hidden"></div>
       </div>
       <!-- </div> -->
@@ -86,7 +87,7 @@
     ></script> -->
 
     <!-- <script src="src/js/data.js"></script> -->
-    <script src="src/js/all.json"></script>
+    <!-- <script src="src/js/all.json"></script> -->
     <script src="src/js/scripts2.js"></script>
   </body>
 </html>
