--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
     <!-- <script src="src/js/data.js"></script> -->
     <!-- <script src="src/js/all.json"></script> -->
+    <script src="src/js/data2.js"></script>
     <script src="src/js/scripts2.js"></script>
   </body>
 </html>
