--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             class="form-control mr-sm-2"
             id="heroes-search"
             type="search"
-            placeholder="Find Heroes & Villains"
+            placeholder="Search H & V"
             aria-label="Search a Hero/Villain"
           />
         </form>
