--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
   </head>
-
   <body class="body">
     <nav class="nav-container">
       <div class="nav-heroes"><h3>heroes</h3></div>
@@ -26,32 +21,15 @@
             class="form-control mr-sm-2"
             id="heroes-search"
             type="search"
-            placeholder="Search H & V"
+            placeholder="Search..."
             aria-label="Search a Hero/Villain"
           />
         </form>
       </div>
       <div class="nav-villains"><h3>villains</h3></div>
     </nav>
-    <!-- <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-      <a class="navbar-brand pokemon-title" href="#"><h1>Pokédex</h1></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-expanded="false"
-        aria-label="toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav"> 
-    <ul class="navbar-nav"> -->
-
     <div class="page-container">
       <ul class="heroes-list"></ul>
-      <!-- <ul class="heroes-list list-group list-unstyled" id="show-modal"></ul> -->
-      <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> -->
       <div class="modal-dialog hidden" role="document">
         <div class="modal-content">
           <div class="modal-header"></div>
@@ -66,29 +44,7 @@
         <div class="work-modal hidden"></div>
         <div class="affiliations-modal hidden"></div>
       </div>
-      <!-- </div> -->
     </div>
-
-    <!-- <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"
-    ></script> -->
-    <!-- <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>  -->
-
-    <!-- <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script> -->
-
-    <!-- <script src="src/js/data.js"></script> -->
-    <!-- <script src="src/js/all.json"></script> -->
-    <script src="src/js/data2.js"></script>
     <script src="src/js/scripts2.js"></script>
   </body>
 </html>
