--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="affiliations-modal hidden"></div>
       </div>
     </div>
+    <script src="src/js/data2.js"></script>
     <script src="src/js/scripts2.js"></script>
   </body>
 </html>
